fixed img on small screen

--- a/project/styles/hikes.css
+++ b/project/styles/hikes.css
@@ -111,7 +111,10 @@ main {
 }
 
 .place-card img {
-    width: 300px;
+    width: 100%;
+    height: auto;
+    max-width: 300px;
+
 }
 
 figcaption {
